tests/characterization/snapshots/characterization__manager__manager_info_extra_argument.snap
---
source: tests/characterization/manager.rs
expression: "context.render_output(&context.run_snapshot_subject([\"manager\", \"info\",\n\"unexpected\"]))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: oqtopus manager info does not accept arguments.
--- end ---
