tests/characterization/snapshots/characterization__manager__manager_status.snap
---
source: tests/characterization/manager.rs
expression: rendered
---
exit: 0
--- stdout ---
manager: Running (PID <PID>)
--- stderr ---
--- end ---
