tests/characterization/snapshots/characterization__manager__manager_status_extra_argument.snap
---
source: tests/characterization/manager.rs
expression: "context.render_output(&context.run_snapshot_subject([\"manager\", \"status\",\n\"unexpected\"]))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: oqtopus manager status does not accept arguments.
--- end ---
