tests/characterization/snapshots/characterization__manager__manager_versions_extra_argument.snap
---
source: tests/characterization/manager.rs
expression: "context.render_output(&context.run_snapshot_subject([\"manager\", \"versions\",\n\"unexpected\",]))"
---
exit: 1
--- stdout ---
Usage:
  oqtopus manager versions
--- stderr ---
--- end ---
