tests/characterization/snapshots/characterization__manager__manager_versions_help.snap
---
source: tests/characterization/manager.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager versions
--- stderr ---
--- end ---
